--- a/web/index.css
+++ b/web/index.css
@@ -118,6 +118,7 @@ button:hover {
     z-index: 1;
     border-radius: 10px;
     margin-top: 5px;
+    border: 5px solid rgba(255, 255, 255, 0.336);
 }
 
 .links {
