--- a/web/index.css
+++ b/web/index.css
@@ -1,300 +1,306 @@
-* {
-    margin: 0;
-}
-
-.body {
-    font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Helvetica", sans-serif;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-@media only screen and (max-width: 600px) {
+    * {
+        margin: 0;
+    }
+    
     .body {
+        font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Helvetica", sans-serif;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    
+    @media only screen and (max-width: 600px) {
+        .body {
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+        .scroll_view {
+            width: calc(100vw - 60px);
+        }
+    }
+    
+    @media only screen and (min-width: 601px) {
+        .body {
+            width: 500px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .scroll_view {
+            width: calc(500px - 40px);
+        }
+    }
+    
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    p {
+        margin: 2px;
+    }
+    
+    #thetuttext {
+        margin: 2px;
         margin-left: 20px;
-        margin-right: 20px;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
+    
+    .caption {
+        color: #bbb;
+        font-size: 16px;
+    }
+    
+    .header {
+        margin-top: 40px;
+        margin-bottom: 25px;
+    }
+    
     .scroll_view {
-        width: calc(100vw - 60px);
+        overflow-x: scroll;
+        overflow-y: hidden;
+        margin: 10px;
+        white-space: nowrap;
+        -webkit-overflow-scrolling: touch;
     }
-}
-
-@media only screen and (min-width: 601px) {
-    .body {
-        width: 500px;
-        margin-left: auto;
-        margin-right: auto;
+    
+    .scroll_view>.card {
+        background-color: #ccc;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 10px;
+        margin: 10px;
+        border-radius: 10px;
+        font-weight: bold;
+        height: 125px;
+        width: 275px;
+        position: relative;
+        display: inline-block;
     }
-    .scroll_view {
-        width: calc(500px - 40px);
+    
+    .scroll_view>.img_card {
+        background-color: #ccc;
+        width: 250px;
+        margin: 5px;
+        border-radius: 10px;
+        font-weight: bold;
+        position: relative;
+        display: inline-block;
     }
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-    margin: 2px;
-}
-
-.caption {
-    color: #bbb;
-    font-size: 16px;
-}
-
-.header {
-    margin-top: 40px;
-    margin-bottom: 25px;
-}
-
-.scroll_view {
-    overflow-x: scroll;
-    overflow-y: hidden;
-    margin: 10px;
-    white-space: nowrap;
-    -webkit-overflow-scrolling: touch;
-}
-
-.scroll_view>.card {
-    background-color: #ccc;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 10px;
-    font-weight: bold;
-    height: 125px;
-    width: 275px;
-    position: relative;
-    display: inline-block;
-}
-
-.scroll_view>.img_card {
-    background-color: #ccc;
-    width: 250px;
-    margin: 5px;
-    border-radius: 10px;
-    font-weight: bold;
-    position: relative;
-    display: inline-block;
-}
-
-button {
-    background-color: rgba(0, 17, 255, 0.904);
-    border-radius: 10px;
-    border: none;
-    margin-left: 20px;
-}
-
-button:hover {
-    background-color: rgba(177, 201, 247, 0.753);
-}
-
-.menu-btn {
-    background-color: #000000e7;
-    color: white;
-    padding: 16px;
-    font-size: 10px;
-    border: none;
-    border-radius: 10px;
-    margin-top: 20px;
-    margin-left: auto;
-}
-
-.dropdown-menu {
-    position: relative;
-    display: inline-block;
-    margin-top: 10px;
-}
-
-.menu-content {
-    display: none;
-    position: absolute;
-    background-color: #000000b6;
-    min-width: 160px;
-    z-index: 1;
-    border-radius: 10px;
-    margin-top: 5px;
-    border: 5px solid rgba(255, 255, 255, 0.336);
-}
-
-.links {
-    color: rgb(255, 255, 255);
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    font-size: 10px;
-    border-radius: 10px;
-}
-
-.links:hover {
-    background-color: #818181;
-}
-
-.dropdown-menu:hover .menu-btn {
-    background-color: #000000;
-}
-
-.card>p {
-    color: white;
-    bottom: 15px;
-    left: 15px;
-    font-size: 0px;
-    position: absolute;
-    text-shadow: 0 0 0px rgba(0, 0, 0, 0.8);
-    /*文字阴影*/
-}
-
-.center {
-    text-align: center;
-}
-
-.left_float {
-    float: left;
-}
-
-.right_float {
-    float: right;
-}
-
-.add_sileo {
-    font-size: 2em;
-    cursor: pointer;
-    text-decoration: none;
-}
-
-.add_sileo:hover,
-a:hover {
-    opacity: 0.8;
-    cursor: pointer;
-}
-
-.package {
-    margin-bottom: 40px;
-}
-
-.package>img {
-    border-radius: 20px;
-    width: 75px;
-    height: 75px;
-    float: left;
-}
-
-.package_info {
-    margin-left: 90px;
-}
-
-.package_name {
-    font-weight: bold;
-    font-size: 21px;
-}
-
-.package_caption {
-    margin-top: 7px;
-    color: #999;
-}
-
-.cell>.title {
-    float: left;
-    color: #999;
-}
-
-.cell>.text {
-    float: right;
-}
-
-h3 {
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-.footer {
-    margin-top: 20px;
-}
-
-.subtle_link,
-.subtle_link>div>div,
-.subtle_link>div>div>p {
-    text-decoration: none;
-    color: black;
-}
-
-.subtle_link:hover,
-.subtle_link>*:hover {
-    opacity: 0.8;
-}
-
-.green {
-    color: #22cc00;
-}
-
-.red {
-    color: #ba0000;
-}
-
-.banner_underlay {
-    background-size: cover;
-    background-position: center;
-    height: 150px;
-    width: 100%;
-    border-radius: 8px;
-    z-index: -2;
-    margin-bottom: 25px;
-    top: 0;
-}
-
-.changelog {
-    display: none;
-}
-
-.nav {
-    display: flex;
-    margin: 20px;
-    float: center;
-}
-
-.nav_btn {
-    width: 50%;
-    display: inline;
-    text-align: center;
-    color: #999;
-    font-weight: 500;
-    padding-bottom: 10px;
-    cursor: pointer;
-}
-
-.changelog_entry {
-    margin-bottom: 18px;
-}
-
-a {
-    text-decoration: none;
-}
-
-.table-btn,
-.table-btn>div {
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-.table-btn:after {
-    content: "›";
-    font-size: 30px;
-    transform: translateY(-40px);
-    float: right;
-}
-
-@media (prefers-color-scheme: dark) {
-    body {
-        background: #161616;
+    
+    button {
+        background-color: rgba(0, 17, 255, 0.904);
+        border-radius: 10px;
+        border: none;
+        margin-left: 20px;
+    }
+    
+    button:hover {
+        background-color: rgba(177, 201, 247, 0.753);
+    }
+    
+    .menu-btn {
+        background-color: #000000e7;
         color: white;
+        padding: 16px;
+        font-size: 10px;
+        border: none;
+        border-radius: 10px;
+        margin-top: 20px;
+        margin-left: auto;
     }
+    
+    .dropdown-menu {
+        position: relative;
+        display: inline-block;
+        margin-top: 10px;
+    }
+    
+    .menu-content {
+        display: none;
+        position: absolute;
+        background-color: #000000b6;
+        min-width: 160px;
+        z-index: 1;
+        border-radius: 10px;
+        margin-top: 5px;
+        border: 5px solid rgba(255, 255, 255, 0.336);
+    }
+    
+    .links {
+        color: rgb(255, 255, 255);
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        font-size: 10px;
+        border-radius: 10px;
+    }
+    
+    .links:hover {
+        background-color: #818181;
+    }
+    
+    .dropdown-menu:hover .menu-btn {
+        background-color: #000000;
+    }
+    
+    .card>p {
+        color: white;
+        bottom: 15px;
+        left: 15px;
+        font-size: 0px;
+        position: absolute;
+        text-shadow: 0 0 0px rgba(0, 0, 0, 0.8);
+        /*文字阴影*/
+    }
+    
+    .center {
+        text-align: center;
+    }
+    
+    .left_float {
+        float: left;
+    }
+    
+    .right_float {
+        float: right;
+    }
+    
+    .add_sileo {
+        font-size: 2em;
+        cursor: pointer;
+        text-decoration: none;
+    }
+    
+    .add_sileo:hover,
+    a:hover {
+        opacity: 0.8;
+        cursor: pointer;
+    }
+    
+    .package {
+        margin-bottom: 40px;
+    }
+    
+    .package>img {
+        border-radius: 20px;
+        width: 75px;
+        height: 75px;
+        float: left;
+    }
+    
+    .package_info {
+        margin-left: 90px;
+    }
+    
+    .package_name {
+        font-weight: bold;
+        font-size: 21px;
+    }
+    
+    .package_caption {
+        margin-top: 7px;
+        color: #999;
+    }
+    
+    .cell>.title {
+        float: left;
+        color: #999;
+    }
+    
+    .cell>.text {
+        float: right;
+    }
+    
+    h3 {
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+    
+    .footer {
+        margin-top: 20px;
+    }
+    
     .subtle_link,
     .subtle_link>div>div,
     .subtle_link>div>div>p {
-        color: white;
+        text-decoration: none;
+        color: black;
     }
-}
+    
+    .subtle_link:hover,
+    .subtle_link>*:hover {
+        opacity: 0.8;
+    }
+    
+    .green {
+        color: #22cc00;
+    }
+    
+    .red {
+        color: #ba0000;
+    }
+    
+    .banner_underlay {
+        background-size: cover;
+        background-position: center;
+        height: 150px;
+        width: 100%;
+        border-radius: 8px;
+        z-index: -2;
+        margin-bottom: 25px;
+        top: 0;
+    }
+    
+    .changelog {
+        display: none;
+    }
+    
+    .nav {
+        display: flex;
+        margin: 20px;
+        float: center;
+    }
+    
+    .nav_btn {
+        width: 50%;
+        display: inline;
+        text-align: center;
+        color: #999;
+        font-weight: 500;
+        padding-bottom: 10px;
+        cursor: pointer;
+    }
+    
+    .changelog_entry {
+        margin-bottom: 18px;
+    }
+    
+    a {
+        text-decoration: none;
+    }
+    
+    .table-btn,
+    .table-btn>div {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    
+    .table-btn:after {
+        content: "›";
+        font-size: 30px;
+        transform: translateY(-40px);
+        float: right;
+    }
+    
+    @media (prefers-color-scheme: dark) {
+        body {
+            background: #161616;
+            color: white;
+        }
+        .subtle_link,
+        .subtle_link>div>div,
+        .subtle_link>div>div>p {
+            color: white;
+        }
+    }
