--- a/web/index.css
+++ b/web/index.css
@@ -2,6 +2,18 @@
         margin: 0;
     }
     
+    .thetuttexttwo {
+        color: #ba0000;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-style: normal
+    }
+    
+    .tutone {
+        font-family: Arial, Helvetica, sans-serif;
+        font-style: normal;
+        font-size: normal;
+    }
+    
     .body {
         font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Helvetica", sans-serif;
         margin-top: 20px;
@@ -42,7 +54,7 @@
     #thetuttext {
         margin: 2px;
         margin-left: 20px;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-style: normal;
     }
     
     .caption {
